--- a/book/slides/slides_code-documentation.qmd
+++ b/book/slides/slides_code-documentation.qmd
@@ -8,7 +8,7 @@ format:
 ---
 
 
-# Project documentation {data-background-color="#FFCD00"}
+# Documentation {data-background-color="#FFCD00"}
 
 ## Why do you need documentation?
 ::: {.theme-section}
@@ -281,123 +281,5 @@ __NB__ This works for R packages, with the proper file structure. See here: http
 
 - Add a docstring to a function, preferably the last function you worked on (so it's fresh in your memory).
 - Keep in mind: what does my user need to know when they are working with this function?
-
-:::
-
-## README
-
-::: {.theme-section}
-
-
-The README page is the first thing your user will see!
-
-The contents typically include one or more of the following:
-
-:::: {.columns}
-::: {.column width="40%"}
-::: {style="text-align: left; margin-top: 0.5em"}
-- __Configuration instructions__
-- __Installation instructions__
-- __Operating instructions__
-- A file manifest (list of files included)
-:::
-:::
-
-::: {.column width="55%"}
-::: {style="text-align: left; margin-top: 0.5em"}
-- Copyright and licensing information
-- Contact information for the distributor or programmer
-- Known bugs
-- Troubleshooting
-- Credits and acknowledgments
-:::
-:::
-::::
-
-:::
-
-:::footer
-*From wikipedia's [Readme]("https://en.wikipedia.org/w/index.php?title=README&oldid=923233067") page*
-:::
-
-## Example README
-![mcfly](../images/screenshots/mcfly.png)
-
-## README examples and templates
-::: {.theme-section}
-
-Some examples from projects with high quality documentation:
-
-:::: {.columns}
-::: {.column width="45%"}
-::: {style="text-align: left; margin-top: 0.5em"}
-
-**Bigger community software projects:**
-
-- Python's [Pandas](https://github.com/pandas-dev/pandas)
-- [Scikit-learn](https://github.com/scikit-learn/scikit-learn)
-- Tidyverse's [Dplyr](https://github.com/tidyverse/dplyr)
-:::
-:::
-::: {.column width="5%"}
-:::
-::: {.column width="45%"}
-::: {style="text-align: left; margin-top: 0.5em"}
-
-**Research software:**
-
-- e-science center's ['McFly' tool](https://github.com/NLeSC/mcfly)
-- Utrecht University's: [Automatic Systematic Review](https://github.com/msdslab/automated-systematic-review)
-- Utrecht University's [MICE](https://github.com/stefvanbuuren/mice)
-:::
-:::
-::::
-
-::: {style="text-align: left; margin-top: 2em"}
-:::
-
-**Templates and ideas:**
-
-- https://gist.github.com/PurpleBooth/109311bb0361f32d87a2
-- https://github.com/matiassingers/awesome-readme
-
-:::
-
-## README how?
-
-::: {.theme-section}
-
-- When you create a repository on Github, there is an option to include a README file
-![readme_github](../images/screenshots/github_new_repo_readme.png)
-- READMEs are files that can be written as text, and commonly use Markdown for formatting.
-
-- Github will show the content of your README file at the root of the repository.
-
-- Your cookiecutter template included a README, so you are all set!
-
-:::
-
-## Your turn!
-::: {.theme-section}
-
-**Edit your README file.**
-
-::: {style="text-align: left; margin-top: 2em"}
-:::
-
-Make sure to include the following information:
-
-- What does your project do?
-
-- How do you start running your project?
-
-- How does the user download your project? (consider `git clone`!)
-
-- How does the user call the main script(s) that should be executed?
-
-::: {style="text-align: left; margin-top: 2em"}
-:::
-
-And perhaps any other elements you are inspired to add (check out the examples!)
 
 :::
