--- a/book/slides/slides_code-documentation.qmd
+++ b/book/slides/slides_code-documentation.qmd
@@ -250,7 +250,7 @@ The command above will create documentation files that can be visualized by call
 :::
 
 :::footer
-__NB__ This works for R packages, with the proper file structure. See here: http://r-pkgs.had.co.nz/intro.html
+__NB__ This works for R packages, with the proper file structure. See here: https://r-pkgs.org/introduction.html
 :::
 
 ## Your turn (choose one!)
